Updates to the website

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
           </div>
 
           <p class="footer__right">
-            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a>
+            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a> or join us on <a href="https://discordapp.com/invite/VcTn7fh">Discord</a>
           </p>
         </footer>
 
