--- a/public/statechannels.html
+++ b/public/statechannels.html
@@ -66,7 +66,7 @@
             <h2 class="statechannels__heading">Counterfactual: Generalized State Channels</h2>
             <div>
               <a href="https://twitter.com/technocrypto">Jeff Coleman</a>,
-              <a href="https://twitter.com/liamihorne">Liam Horne</a>, and
+              <a href="https://github.com/snario">Liam Horne</a>, and
               <a href="https://ethresear.ch/u/ldct/summary">Li Xuanji</a>
             </div>
 
@@ -94,15 +94,8 @@
             <div class="statechannels__faq">
               <h3 class="statechannels__faq__title">How are state channels different from Plasma?</h3>
               <p class="statechannels__faq__body">
-                State channels perform under environments of unanimous consent amongst parties involved whereas Plasma does not have this restriction. In Plasma, the validator set is assumed to be different than the participant set whereas in state channels they are the same set. Additionally, Plasma requires publishing the merkle root of the off-chain state periodicaly, whereas state channels assume no on-chain operations will ever be necessary. However, this is an <a href="https://twitter.com/VitalikButerin/status/1000856690982510592">e</a><a href="https://twitter.com/VitalikButerin/status/1000856690982510592">volving</a> <a href="https://twitter.com/VladZamfir/status/1004983493133250561">discussion</a>.
+                State channels perform under environments of unanimous consent amongst parties involved whereas Plasma does not have this restriction. In Plasma, the validator set is assumed to be different than the participant set whereas in state channels they are the same set. Additionally, Plasma requires publishing the merkle root of the off-chain state periodicaly, whereas state channels assume no on-chain operations will ever be necessary.
               </p>
-            </div>
-
-            <div class="statechannels__faq">
-              <h3 class="statechannels__faq__title">I'm interested in this kind of research, how can I help?</h3>
-              <p class="statechannels__faq__body">If you're interesting in contributing please reach out to us directly at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a>. Additionally, this paper is a dynamic document; to contribute directly or propose fixes, visit the <a href="https://github.com/counterfactual/paper">GitHub repository</a>.</p>
-
-              <p class="statechannels__faq__body">More answers will be added as questions come to us.</p>
             </div>
 
           </div>
@@ -127,7 +120,7 @@
           </div>
 
           <p class="footer__right">
-            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a>
+            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a> or join us on <a href="https://discordapp.com/invite/VcTn7fh">Discord</a>
           </p>
         </footer>
 
