--- a/public/team.html
+++ b/public/team.html
@@ -64,13 +64,13 @@
 
           <div class="hero">
             <h2 class="hero__heading">Our team</h2>
-            <p class="hero__subheading">Counterfactual is building a generalized framework for native state channels integration in Ethereum-based decentralized applications.</p>
+            <p class="hero__subheading">Counterfactual is an Open Source project that relies on the tireless support of individual contributors. These are the teams that guide the development and instruction of Counterfactual.</p>
           </div>
 
           <div class="team-content">
             <div class="team-content__item">
               <h3 class="team-content__item__title">Contributors</h3>
-              <p class="team-content__item__body">Consectetur adipiscing elit. Pellentesque et metus interdum, luctus lectus quis, ornare purus. In fermentum erat vitae.</p>
+              <p class="team-content__item__body"></p>
               <div class="team-content__item__logos">
                 <a href="https://l4.ventures/">
                   <svg width="53px" height="53px" viewBox="0 0 53 53" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -123,16 +123,13 @@
                 </a>
               </div>
               <ul class="team-content__item__contributors">
-                <li>Randal Osborne</li>
-                <li>Jane Boyd</li>
-                <li>Dora Bridges</li>
-                <li>Morris Adkins</li>
-                <li>Dora Bridges</li>
+                <li>Armani Ferrante</li>
+                <li>Alex Xiong</li>
               </ul>
             </div>
             <div class="team-content__item">
               <h3 class="team-content__item__title">Backers</h3>
-              <p class="team-content__item__body">Consectetur adipiscing elit. Pellentesque et metus interdum, luctus lectus quis, ornare purus. In fermentum erat vitae.</p>
+              <p class="team-content__item__body"></p>
               <div class="team-content__item__logos">
                 <a href="https://www.ethereum.org/foundation">
                   <img src="./assets/logos/ethereum.svg" alt="Ethereum Foundation">
@@ -162,7 +159,7 @@
           </div>
 
           <p class="footer__right">
-            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a>
+            If you're interested in joining us, please send us an email at <a href="mailto:hello@counterfactual.com">hello@counterfactual.com</a> or join us on <a href="https://discordapp.com/invite/VcTn7fh">Discord</a>
           </p>
         </footer>
 
