--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,8 @@
           <div class="footer__left">
             <img class="footer__left__logo" src="./assets/logo.svg" alt="Counterfactual">
             <p class="footer__left__text">
-              Copyright 2018 Counterfactual.<br>
-              All rights reserved. Legal
+              Copyright © 2018 Counterfactual contributors
+              
             </p>
           </div>
 
