--- a/public/technology.html
+++ b/public/technology.html
@@ -133,8 +133,8 @@
           <div class="footer__left">
             <img class="footer__left__logo" src="./assets/logo.svg" alt="Counterfactual">
             <p class="footer__left__text">
-              Copyright 2018 Counterfactual.<br>
-              All rights reserved. Legal
+              Copyright © 2018 Counterfactual contributors
+              
             </p>
           </div>
 
