Add some more names

--- a/public/team.html
+++ b/public/team.html
@@ -125,6 +125,8 @@
               <ul class="team-content__item__contributors">
                 <li>Armani Ferrante</li>
                 <li>Alex Xiong</li>
+                <li>Patrick McCorry</li>
+                <li>Chris Buckland</li>
               </ul>
             </div>
             <div class="team-content__item">
