remove .html extension from pages

--- a/public/technology/index.html
+++ b/public/technology/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
   <title>Counterfactual - Technology</title>
   <link rel="stylesheet" href="/app.css">
 </head>
@@ -16,7 +16,7 @@
 
         <div class="nav">
           <h1 class="nav__left">
-            <a href="./index.html" alt="Counterfactual">
+            <a href="/" alt="Counterfactual">
               <!-- Use inline svg to avoid Safari svg rendering error -->
               <svg height="1" viewBox="0 0 607.455522 606.993078" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs><path id="a" d="m0 0h606v606h-606z"/><path id="b" d="m39.490566 39.5652174v129.9139126h122.080528v-129.9139126zm161.571094 149.1334786c0 11.208676-9.119736 20.345652-20.307264 20.345652h-160.4471318c-11.16960824 0-20.3072642-9.121998-20.3072642-20.345652v-168.3530438c0-11.20563312 9.12277376-20.3456522 20.3072642-20.3456522h160.4471318c1.231816.01977015 1.231816.01977015 2.505397.12979324 4.120897.458743 8.123056 1.90224371 11.94836 5.73477913 3.825304 3.83253543 5.266082 7.84225963 5.723959 11.97094663.109816 1.2759893.109816 1.2759893.12434 1.9206422.003756.2922425.005492 56.6064207.005208 168.9425348zm69.612755-91.2130438-52.546755-80.7982609c-.841452-.846087-.841452-1.6891304-.561981-2.8152174.28251-1.4091304 1.685944-2.8152174 3.371887-3.3782609l26.133642-9.29173909c2.809905-.84304347 6.181792.28304348 7.588264 2.25217392l63.783339 98.53565217.28251.28c.841453 1.126087.841453 2.535217 0 3.661304l-64.065849 98.815653c-1.685944 2.252173-4.778359 3.37826-7.588264 2.252173l-26.695623-9.008695c-1.403434-.563044-2.527396-1.409131-3.089377-2.815218-.28251-.563043-.561982-1.972174.279471-3.37826l53.108736-80.518261c3.092415-4.221305 3.092415-9.851739 0-13.7930438z"/><mask id="c" fill="#fff"><use fill="none" xlink:href="#a"/></mask><mask id="d" fill="#fff"><use fill="none" xlink:href="#b"/></mask></defs><g fill="none" fill-rule="evenodd"><use fill="#101010" xlink:href="#a"/><g fill="#101010" mask="url(#c)"><path d="m0 0h645v648h-645z" transform="translate(-12.12 -9.09)"/></g><g transform="translate(142 200)"><use fill="#fff" fill-rule="nonzero" xlink:href="#b"/><g fill="#fff" mask="url(#d)"><path d="m0 0h346v347h-346z" transform="translate(-12.150943 -70)"/></g></g></g>
@@ -26,9 +26,9 @@
 
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
-            <a class="nav__right__item active" href="./technology.html">technology.</a>
-            <a class="nav__right__item" href="./team.html">team.</a>
-            <a class="nav__right__item" href="./statechannels.html">state channels.</a>
+            <a class="nav__right__item active" href="/technology">technology.</a>
+            <a class="nav__right__item" href="/team">team.</a>
+            <a class="nav__right__item" href="/statechannels">state channels.</a>
             <a class="nav__right__item" target="_blank" href="https://github.com/counterfactual/specs">specs.</a>
             <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
             <a class="nav__right__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
@@ -44,9 +44,9 @@
 
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
-          <a class="mobile-menu__item active" href="./technology.html">technology.</a>
-          <a class="mobile-menu__item" href="./team.html">team.</a>
-          <a class="mobile-menu__item" href="./statechannels.html">state channels.</a>
+          <a class="mobile-menu__item active" href="/technology">technology.</a>
+          <a class="mobile-menu__item" href="/team">team.</a>
+          <a class="mobile-menu__item" href="/statechannels">state channels.</a>
           <a class="mobile-menu__item" target="_blank" href="https://github.com/counterfactual/specs">specs.</a>
           <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
           <a class="mobile-menu__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
@@ -78,7 +78,7 @@
 
             <div class="tech-content__info">
               <div class="tech-content__info__1">
-                <object class="md-only" data="./assets/animations/01.svg" type="image/svg+xml"></object>
+                <object class="md-only" data="../assets/animations/01.svg" type="image/svg+xml"></object>
                 <div class="inner-content">
                   <h3 class="inner-content__title">An Off-Chain Application Library</h3>
                   <p class="inner-content__body">
@@ -92,7 +92,7 @@
               </div>
 
               <div class="tech-content__info__2">
-                <object class="md-only" data="./assets/animations/02.svg" type="image/svg+xml"></object>
+                <object class="md-only" data="../assets/animations/02.svg" type="image/svg+xml"></object>
                 <div class="inner-content">
                   <h3 class="inner-content__title">A Protocol for Generalized State Channels</h3>
                   <p class="inner-content__body">
@@ -104,7 +104,7 @@
               </div>
 
               <div class="tech-content__info__3">
-                <object class="md-only" data="./assets/animations/03.svg" type="image/svg+xml"></object>
+                <object class="md-only" data="../assets/animations/03.svg" type="image/svg+xml"></object>
                 <div class="inner-content">
                   <h3 class="inner-content__title">Secured by the Ethereum Blockchain</h3>
                   <p class="inner-content__body">
@@ -131,10 +131,10 @@
 
         <footer class="footer">
           <div class="footer__left">
-            <img class="footer__left__logo" src="./assets/logo.svg" alt="Counterfactual">
+            <img class="footer__left__logo" src="../assets/logo.svg" alt="Counterfactual">
             <p class="footer__left__text">
               Copyright © 2018 Counterfactual contributors
-              
+
             </p>
           </div>
 
