Change link to the specs to gitbook

--- a/public/statechannels/index.html
+++ b/public/statechannels/index.html
@@ -29,7 +29,7 @@
             <a class="nav__right__item" href="/technology">technology.</a>
             <a class="nav__right__item" href="/team">team.</a>
             <a class="nav__right__item active" href="/statechannels">state channels.</a>
-            <a class="nav__right__item" target="_blank" href="https://github.com/counterfactual/specs">specs.</a>
+            <a class="nav__right__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
             <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
             <a class="nav__right__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
           </nav>
@@ -47,7 +47,7 @@
           <a class="mobile-menu__item" href="/technology">technology.</a>
           <a class="mobile-menu__item" href="/team">team.</a>
           <a class="mobile-menu__item active" href="/statechannels">state channels.</a>
-          <a class="mobile-menu__item" target="_blank" href="https://github.com/counterfactual/specs">specs.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
           <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
           <a class="mobile-menu__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
         </div>
