--- a/public/specs/index.html
+++ b/public/specs/index.html
@@ -1,9 +1,9 @@
  <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
     <title>Specs</title>      
-    <meta http-equiv="refresh" content="0;URL='https://github.com/counterfactual/specs'" />    
+    <meta http-equiv="refresh" content="0;URL='https://specs.counterfactual.com'" />    
   </head>    
   <body> 
-    <p>This page will redirect to a fillable form document at <a href="https://github.com/counterfactual/specs">https://github.com/counterfactual/specs</a>.</p> 
+    <p>This page will redirect to a fillable form document at <a href="https://specs.counterfactual.com">https://specs.counterfactual.com</a>.</p> 
   </body>  
 </html>  
