Add Alon to Prototypal team list

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -131,6 +131,7 @@
                     <li>Erik Bryn</li>
                     <li>Patience Tema Baron</li>
                     <li>Joel Bertoldi</li>
+                    <li>Alon Bukai</li>
                   </ul>
                 </div>
               </div>
