--- a/public/technology/index.html
+++ b/public/technology/index.html
@@ -32,6 +32,7 @@
             <a class="nav__right__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
             <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
             <a class="nav__right__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
+            <a class="nav__right__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
           </nav>
           <!-- /if desktop -->
 
@@ -50,6 +51,7 @@
           <a class="mobile-menu__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
           <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
           <a class="mobile-menu__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
         </div>
       </div>
     </div>
