--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,10 @@
           <div class="callout">
             <div class="callout__content">
               <h2 class="callout__content__heading">Counterfactual is a protocol for scalable blockchain applications.</h2>
-              <a class="btn btn--stroke" href="/technology">learn more</a>
+              <div class="callout__content__buttons">
+                <a class="btn btn--stroke" href="/technology">learn more</a>
+                <a class="btn btn--stroke" href="https://playground.counterfactual.com/" target="_blank">playground</a>
+              </div>
             </div>
           </div>
 
